Last commit by middleware and front end

--- a/html5/chat.html
+++ b/html5/chat.html
@@ -1,10 +1,8 @@
 <article ng-app='konga'>
-	
 	<form ng-controller='chat' name='f_signup' method='post' action='/public/processor.php?action=signup'>
-		
 		<p></p>
 		<select>
-			<option ng-repeat='user in users' value='{{user.user_id}}'><span ng-if='{{user.status}}'><img src='' /></span></a> {{user.email}}</option>
+			<option ng-repeat='user in users' value='{{user.user_id}}' class='status_{{user.status}}'> {{user.email}}</option>
 		</select>		
 		<p></p>
 		<div class='conversation'>	
@@ -14,7 +12,7 @@
 		<p></p>
 		<textarea class='conversation'></textarea>
 		<p></p>
-		<input type='submit' value='send' />		
+		<input type='button' value='send' />		
 	</form>
 </article>
 
@@ -27,5 +25,29 @@
 var app = angular.module('konga', []);
 app.controller('chat', function($scope){
 	$scope.users = /users/;	
+});
+</script>
+
+<script type="text/javascript">
+jQuery(document).ready(function($){
+	var lsh = window.localStorage;
+	$('select').change(function(){
+		var toWho = $('select option:selected').val();
+		lsh.setItem('toWho', toWho);
+	});
+	$('input[type=button]').click(function(){
+		var theMsg =  $('textarea.conversation').val();
+		$.ajax({
+			url: '/public/processor.php?action=sendChat', 
+			type: 'post', 
+			data: {
+				to: lsh.getItem('toWho'), 
+				msg: theMsg
+			}, 
+			success: function(data){
+				alert(data);
+			}
+		});
+	});
 });
 </script>
