--- a/sunday/login.html
+++ b/sunday/login.html
@@ -1,5 +1,5 @@
 		<article>
-			<form method='post' action='/public/processor.php?action=signin'>
+			<form method='post' action='/public/model.php?action=signin'>
 				<p>email</p>
 				<input type='email' name='email' placeholder='email@provider.com' />
 				<p>password</p>
