--- a/sunday/signup.html
+++ b/sunday/signup.html
@@ -1,5 +1,5 @@
 <article>
-	<form name='f_signup' method='post' action='/public/processor.php?action=signup'>
+	<form name='f_signup' method='post' action='/public/model.php?action=signup'>
 		<p>email</p>
 		<input type='email' name='email' placeholder='email@provider.com' />
 		<p>password</p>
